# swlang

./: .gitignore  Cargo.toml  README  README.md  errors.md
.github/workflows/: Release.yml  Rust.yml  publish.yml
src/: compiler.rs  errors.rs  main.rs
src/compiler/: compiler.rs  errors.rs  flags.rs  mod.rs
src/messages/: errors.rs  help.rs  mod.rs
src/template/: downloader.rs  errors.rs  mod.rs
