[package]
name = "swlang"
version = "0.0.5"
edition = "2021"

license =  "MIT"
description = "A simple configuration language written in Rust"
authors = ["Gustavo Mendonça, <https://github.com/swxtz>"]
repository = "https://github.com/swxtz/swlang"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"]}
colored = "2.0.4"
