[package]
name = "swlang"
version = "0.0.9"
edition = "2021"

license =  "MIT"
description = "A simple configuration language written in Rust"
authors = ["Gustavo Mendonça, <https://github.com/swxtz>"]
repository = "https://github.com/swxtz/swlang"
documentation = "https://docs.rs/crate/swlang/0.0.5"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
cargo-tarpaulin = "0.26.1"
colored = "2.0.4"
reqwest = "0.11.18"
tokio = { version = "1.29.1", features = ["full"] }
