[package]
name = "swlang"
version = "0.0.11"
edition = "2021"

license =  "MIT"
description = "A simple configuration language written in Rust"
authors = ["Gustavo Mendonça, <https://github.com/swxtz>"]
repository = "https://github.com/swxtz/swlang"
documentation = "https://docs.rs/crate/swlang"

[package.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
publish = "cargo publish"
publish-dirty = "cargo publish --allow-dirty"
doc = "cargo doc --no-deps --open"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
reqwest = "0.11.18"
tokio = { version = "1.29.1", features = ["full"] }
